--- a/style.css
+++ b/style.css
@@ -1,13 +1,51 @@
+body {
+  background-color: #323232;
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 table {
   border-collapse: collapse;
-  margin: 20px auto;
 }
+
 td {
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   text-align: center;
   vertical-align: middle;
-  font-size: 40px;
-  border: 1px solid #000;
-  cursor: default;
+  font-size: 48px;
+  font-weight: bold;
+  border: 5px solid white;
+  border-top: none;
+  border-left: none;
+}
+
+tr:first-child td {
+  border-top: none;
+}
+
+td:first-child {
+  border-left: none;
+}
+
+tr:last-child td {
+  border-bottom: none;
+}
+
+td:last-child {
+  border-right: none;
+}
+
+.circle {
+  color: #3c98ba;
+}
+
+.cross {
+  color: #eeb402;
 }
