--- a/style.css
+++ b/style.css
@@ -3,11 +3,19 @@ body {
   font-family: "Open Sans", sans-serif;
   color: white;
   margin: 0;
-  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+#content {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  position: relative;
+  width: 100%;
 }
 
 table {
@@ -15,8 +23,8 @@ table {
 }
 
 td {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   text-align: center;
   vertical-align: middle;
   font-size: 48px;
@@ -24,6 +32,11 @@ td {
   border: 5px solid white;
   border-top: none;
   border-left: none;
+}
+
+td:hover {
+  cursor: pointer;
+  background-color: #3d3d3d;
 }
 
 tr:first-child td {
@@ -48,4 +61,15 @@ td:last-child {
 
 .cross {
   color: #eeb402;
+}
+
+svg.win-line {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  z-index: 10;
 }
